--- a/codeception.yml
+++ b/codeception.yml
@@ -14,6 +14,18 @@ settings:
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
+coverage:
+    enabled: true
+    include:
+        - Classes/*
+    exclude:
+        - ../../../vendor/*
+        - ../../../typo3/*
+        - ../../../typo3temp/*
+        - ../../../bin/*
+        - ../../../Build/*
+        - Tests/*
+        - .Build/*
 modules:
     config:
         Db:
